[package]
name = "ivr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1.0.203", features = ["derive"] }
axum = "0.7.5"
hyper = "1.3.1"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
[workspace]
members = ["borrow", "hashmap", "strings"]
